_sass/_home.scss
@keyframes fade-from-top {
  from {
    margin-top: -200px;
    opacity: 0;
  }
  to {
    margin-top: 0;
    opacity: 0.5;
  }
}

.home {
  &__header {
    position: relative;
    width: 100%;
    margin: 0;
    overflow: hidden;
    &__background {
      margin-top: -300px;
      opacity: 0;
      animation: fade-from-top 2s ease 2.5s 1 normal forwards;
      position: absolute;
      left: 0;
      top: 30px;
      width: 100%;
      z-index: 2;
    }
    &__title {
      padding: 40px;
      font-family: 'Montserrat', sans-serif;
      margin-top: auto;
      margin-bottom: auto;
      padding-top: 400px;
      text-transform: uppercase;
      letter-spacing: 2px;
      color: white;
      font-weight: 500;
      text-shadow: rgba(0, 0, 0, 1) 0 0 40px;
      z-index: 3;
      position: relative;
      h1 {
        font-weight: 500;
        font-size: 60px;
        letter-spacing: 10px;
      }
      p {
        letter-spacing: 3px;
      }
    }
    .feature-row--right {
      padding-top: 230px;
    }
  }

  &__featured-speakers {
    padding-top: 40px;
    padding-bottom: 40px;
    background-color: white;
    font-family: 'Montserrat', sans-serif;
    h2 {
      font-size: 15px;
      text-transform: uppercase;
      text-align: center;
    }
    &__speak-title {
      font-size: 34px;
      text-align: center;
      font-weight: 700;
    }
  }

  &-marketing {
    background-color: white;
    padding-top: 100px;
    padding-bottom: 30px;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    width: 100%;
    overflow: hidden;
    background-image: url(../../assets/wave-black.svg);
    h2 {
      font-family: $primary-font;
      font-size: 40px;
      font-weight: bold;
    }
    .home-marketing-content {
      vertical-align: middle;
      padding-left: $spacing-unit;
      padding-top: 150px;
      padding-bottom: 200px;
      padding-right: 50px;
    }
    .home-marketing-img-container {
      .img {
        width: 400px;
        height: 300px;
        overflow: hidden;
        img {
          width: 100%;
          vertical-align: center;
        }
      }
    }
  }

  &__quote {
    overflow: hidden;
    padding: 5 * $spacing-unit 0 5 * $spacing-unit 0;
  }
}
.partners{
  &-main{
    width: 100%;
  }
  &-content{
    font-size: 16px;
    text-align: center;
    font-weight: 400;
    width: inherit;
  }
  &-logo{
    overflow: hidden;
    text-align: center;
    &-resize{
      width: inherit;
      width: 200px;
      height: 45px;
      display: inline-block;
    }
  }
}

@include media-query($on-laptop) {
  .home {
    &__header {
      &__title {
        h1 {
          font-size: 50px;
        }
        p {
          letter-spacing: 2px;
        }
      }
      .feature-row--right {
        padding-top: 130px;
      }
    }
  }
}

@include media-query($on-tablet) {
  .home {
    &__header {
      &__title {
        padding-top: 300px;
      }
      .feature-row--right {
        padding-top: 50px;
      }
    }
  }
}

@include media-query($on-palm) {
  .home {
    &__header {
      &__title {
        h1 {
          font-size: 40px;
          letter-spacing: 2px;
        }
        p {
          letter-spacing: 1px;
        }
      }
    }
    &-marketing {
      .home-marketing-content {
        padding-top: 50px;
        padding-bottom: 50px;
      }
      .home-marketing-img-container {
        display: none;
      }
    }
  }
}

@include media-query($on-phone) {
  .home {
    &__header {
      &__title {
        text-align: center;
        h1 {
          font-size: 30px;
        }
      }
    }
  }
}

@import "home_gallery";

